--- a/app/src/main/res/drawable/bg_recorder.xml
+++ b/app/src/main/res/drawable/bg_recorder.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#1a237e"
-        android:angle="90"
-        android:endColor="#000051"
+        android:startColor="#00c853"
+        android:angle="-90"
+        android:endColor="#009624"
         />
 </shape>
