--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="text_color_white">#fff</color>
-    <color name="text_color_black">#5E5E5E</color>
+    <color name="text_color_black">#2E2E2E</color>
+    <color name="text_color_red">#F00</color>
+    <color name="text_color_orange">#FFC107</color>
+    <color name="text_color_blue">#00F</color>
 </resources>
