--- a/app/src/main/res/drawable/bg_recorder.xml
+++ b/app/src/main/res/drawable/bg_recorder.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <gradient
         android:startColor="#00c853"
         android:angle="-90"
-        android:endColor="#009624"
+        android:centerColor="#5500c853"
+        android:endColor="#1100c853"
         />
 </shape>
