--- a/app/src/main/res/layout/activity_check_noise.xml
+++ b/app/src/main/res/layout/activity_check_noise.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/bg_recorder" />
+        android:src="@drawable/bg_check_noise" />
 
     <TextView
         android:id="@+id/tv_decibel"
