--- a/app/src/main/res/layout/activity_check_noise.xml
+++ b/app/src/main/res/layout/activity_check_noise.xml
@@ -84,7 +84,7 @@
         android:layout_width="160dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:gravity="center"
         android:text="@string/view_map"
         android:textColor="@color/text_color_black"
