--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,9 @@
     android:id="@+id/main"
     tools:context=".main.MainActivity">
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_main"
+        android:verticalScrollbarPosition="defaultPosition"
+        />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
